--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ScanDRIENK - Smart Dispenser</title>
+    <title>ScanDRINK - Smart Dispenser</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -16,7 +16,7 @@
         <header class="header">
             <div class="logo-container">
                 <img src="assets/ScanDRINK.png" alt="ScanDRINK Logo" class="logo-img">
-                <h1 class="brand-name">ScanDRINK</h1>
+                <h1 class="brand-name">ScanDRINKEEE</h1>
             </div>
         </header>
 
@@ -175,4 +175,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
