--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="header">
             <div class="logo-container">
                 <img src="assets/ScanDRINK.png" alt="ScanDRINK Logo" class="logo-img">
-                <h1 class="brand-name">ScanDRINKEEE</h1>
+                <h1 class="brand-name">ScanDRINK</h1>
             </div>
         </header>
 
@@ -175,5 +175,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
