--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     
                     <div class="drink-card" data-drink="Teh" data-price="1">
                         <div class="drink-image">
-                            <img src="assets/tea-cup.jpeg" alt="Teh" class="drink-photo">
+                            <img src="assets/Teh.png" alt="Teh" class="drink-photo">
                             <div class="drink-overlay">
                                 <div class="drink-icon"></div>
                             </div>
