--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <!-- Midtrans Snap.js -->
-    <script src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="Mid-client-OOmIVTacWGWDSb82"></script>
+    <!-- Midtrans Snap.js for production -->
+    <script src="https://app.midtrans.com/snap/snap.js" data-client-key="Mid-client-tFqeQEeAryIBCsUG"></script>
 </head>
 <body>
     <div class="app-container">
